replace getFirst and getLast with get index
trying to resolve others' "getFirst" issues --> List class not importing properly?